@@ -1,15 +1,9 @@
 h1. TODOs / ideas for next releases
 
-* update to morphia 0.95
-** Removed implicit conversions from String -> ObjectId; please use ObjectId directly; Breaking Change
-** see http://code.google.com/p/morphia/wiki/ReleaseNotes
-** and http://code.google.com/p/morphia/wiki/EntityAnnotation
-** Document changes: http://groups.google.com/group/morphia/browse_thread/thread/b6c3ce51884b74e1/eb9eb71383f17a57
-** Autoinjected id should be ObjectId, user may define and override what he wants
-* Implement new index definition syntax
-* implement to new UpdateOperation http://code.google.com/p/morphia/wiki/Updating - Create an
-UpdateOperation and introduce a dsl which calls methods of updateoperation - breaking change
-* check out "GORM Redis":http://grails.org/plugin/redis plugin and the "inconsequential":http://github.com/grails/inconsequential implementation
+* Add test for index definition syntax
+* document new index definition syntax
+* document new update method UpdateOperation http://code.google.com/p/morphia/wiki/Updating - Create an UpdateOperation and introduce a dsl which calls methods of updateoperation - breaking change
+* check out "GORM Redis":http://grails.org/plugin/redis plugin and the "inconsequential":http://github.com/grails/inconsequential implementation and derive some best practices
 * add option to drop database on startup (dbCreate = "create-drop" // one of 'create', 'create-drop','update' see http://grails.org/doc/1.3.x/guide/3.%20Configuration.html#3.3%20The%20DataSource)
 * map Datastore methods onto Domain classes (as static and instance methods) - updateFirst, findAndUpdate
 * update method: handle references to instances properly
