@@ -2,6 +2,7 @@ package org.acme
 
 import com.google.code.morphia.annotations.Id
 import com.google.code.morphia.Key
+import com.google.code.morphia.utils.IndexDirection
 
 class Task {
 
@@ -26,8 +27,10 @@ class Task {
   transient String pass = "pass" // test ignore transients
 
   static indexes = {
-    idx_date unique:true, dropDups:false, columns:[dateCreated:"asc", lastUpdated:"desc"]
-    idx_project colums:[projectId:'asc']
+    idx_date unique:true, dropDups:true, fields:[dateCreated:"asc", lastUpdated:"DESC"]
+    idx_desc unique:false, dropDups:true, fields:[description:-1] // 1 = ASC, -1 = DESC
+    idx_project fields:[projectId:IndexDirection.BOTH] // you can use morphias IndexDirection directly
+
   }
 
   static constraints = {
