@@ -1,8 +1,0 @@
-package grails.plugins.mongodb
-
-/**
- *
- * @author: Juri Kuehn
- */
-class MappingIndexesEvaluator {
-}
