@@ -153,20 +153,22 @@ public class BasicPersistenceTests extends GroovyTestCase {
   }
 
   void testUpdateMethod() {
-    def t = new Task(name: "Task that will be updated!", actualHours: 10)
+    def t = new Task(taskId: "Update me good", name: "Task that will be updated!", actualHours: 10)
     t.save()
     println "testUpdateMethod:task:"
     println t.errors?.allErrors
 
-    assertNotNull "task should get an id", t.taskId
+    t = Task.get(t.taskId) // get from db
+
     assertEquals "task should have the right actualHours value", 10, t.actualHours
 
-    t.update([
-        '$inc': ['actualHours': 5]
-    ])
+    t.update {
+      inc "actualHours", 5
+    }
 
     t = Task.get(t.taskId) // get from db
-    assertNotNull "task should should be reretrieved from db", t.taskId
+    assertNotNull "task should have been reretrieved from db", t
+    assertNotNull "correct task should have been reretrieved from db", t.taskId
     assertEquals "task should have incremented actualHours value", 15, t.actualHours
 
     t.delete()
